--- a/source.css
+++ b/source.css
@@ -1,7 +1,7 @@
 /* credits to the vencord css snippet channels for most of the code. */
 /* I DO NOT OWN ANY OF THIS CODE, THIS IS JUST A BUNDLE OF CSS SNIPPETS FROM DISCORD.GG/VENCORD. */
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap')
 @import url('https://discordstyles.github.io/MinimalCord/dist/MinimalCord.css');
 @import url('https://discordstyles.github.io/RadialStatus/dist/RadialStatus.css');
 @import url('https://nyri4.github.io/Discolored/main.css');
