--- a/source.css
+++ b/source.css
@@ -1,38 +1,9 @@
 /* credits to the vencord css snippet channels for most of the code. */
 /* I DO NOT OWN ANY OF THIS CODE, THIS IS JUST A BUNDLE OF CSS SNIPPETS FROM DISCORD.GG/VENCORD. */
 
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap')
-@import url('https://discordstyles.github.io/MinimalCord/dist/MinimalCord.css');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import url('https://discordstyles.github.io/RadialStatus/dist/RadialStatus.css');
 @import url('https://nyri4.github.io/Discolored/main.css');
-
-:root {
-  --accent: 64,75,51;
-  --undefined: 0;
-  --dark-bg-hue: 87;
-  --dark-bg-saturation: 0%;
-  --dark-bg-lightness: 8%;
-  --undefined: 0;
-  --light-bg-hue: 200;
-  --light-bg-saturation: 12%;
-  --light-bg-lightness: 100%;
-  --font: 0;
-  --message-padding: 10px;
-  --message-spacing: 10px;
-  --rs-small-spacing: 3px;
-  --rs-medium-spacing: 2px;
-  --rs-large-spacing: 2px;
-  --rs-small-width: 2px;
-  --rs-medium-width: 2px;
-  --rs-large-width: 2px;
-  --rs-avatar-shape: 50%;
-  --rs-online-color: #43b581;
-  --rs-idle-color: #faa61a;
-  --rs-dnd-color: #f04747;
-  --rs-offline-color: #636b75;
-  --rs-streaming-color: #643da7;
-  --rs-phone-visible: block;
-}
 
 /* Any custom CSS below here */
 
@@ -159,18 +130,6 @@ button.button__4f306 /* make user panel buttons round */ {
 .channel_c21703:hover {
     margin-left: 18px;
 }
-
-.standardSidebarView__1129a
- { top: 0 !important; }
-.layer__2efaa + .layer__2efaa
- { border-radius: 10px !important;
-   box-shadow: 5px 5px 25px black;
-   border: 1px solid var(--border-strong);
-   width: 1100px !important;
-   height: 80vh !important;
-   margin: auto !important;
-   padding: 0 !important; }
-#app-mount .baseLayer__8fda3 /*keep view under settings*/
  { opacity: 1 !important;
    transform: unset !important; }
 
