--- a/source.css
+++ b/source.css
@@ -69,10 +69,11 @@
     background-size: cover;
 }
 
-.messagesWrapper_ea2b0b {
+/* Show new messages info box during hover only */
+.messagesWrapper_add28b {
     overflow: hidden;
 }
-.newMessagesBar__8b6d7 {
+.newMessagesBar__8b272 {
     top: -48px;
     height: 72px;
     transition: top 0.2s ease;
@@ -80,7 +81,7 @@
     box-shadow: none;
     border-radius: 0;
 }
-.newMessagesBar__8b6d7::before {
+.newMessagesBar__8b272::before {
     content: '';
     background: var(--brand-experiment);
     box-shadow: var(--elevation-low);
@@ -89,40 +90,39 @@
     height: 32px;
     border-radius: 12px;
 }
-.newMessagesBar__8b6d7:hover {
+.newMessagesBar__8b272:hover {
     top: -12px;
 }
 
-button.button__4f306 /* make user panel buttons round */ {
+button.button_ae40a4 /* make user panel buttons round */ {
     border-radius: 50%;
 }
-.button__4f306:last-child /* settings button */, 
-.attachButton_b1db83 .attachButtonInner__3ce2b /* upload button */,
-.emojiButton__30ec7 .contents_fb6220 /* emoji button */,
-.closeButton__34341 /* settings exit button */ {
+.button_ae40a4:last-child /* settings button */,
+.attachButton__56f98 .attachButtonInner__84c26 /* upload button */,
+.emojiButtonNormal__5f64f /* emoji button */,
+.closeButton__8177f /* settings exit button */ {
     transition: transform 1s ease;
 }
-.button__4f306:last-child:hover,
-.attachButton_b1db83:hover .attachButtonInner__3ce2b,
-.emojiButton__30ec7:hover .contents_fb6220,
-.closeButton__34341:hover {
+
+.button_ae40a4:last-child:hover,
+.attachButton__56f98:hover .attachButtonInner__84c26,
+.emojiButtonNormal__5f64f:hover .spriteContainer__732c7,
+.closeButton__8177f:hover {
     transform: rotate(360deg);
 }
 
-.wrapper__7bcde .link__95dc0 /* channels */,
-.container__4f20e /* members */,
-.channel_c21703 /* dms */,
-.side_b4b3f6 .item__48dda /* settings */ {
+/* hover anim */
+.wrapper__612a5 .link_ddbb36 /* channels */,
+.member_aa4760 /* members */,
+.channel__0aef5 /* dms */,
+.sidebar__02e8d .item__48dda /* settings */ {
     transition: margin-left 0.2s ease;
 }
-.wrapper__7bcde:hover .link__95dc0,
-.side_b4b3f6 .item__48dda:hover {
+.wrapper__612a5:hover .link_ddbb36,
+.sidebar__02e8d .item__48dda:hover {
     margin-left: 10px;
 }
-.container__4f20e:hover,
-.channel_c21703:hover {
+.member_aa4760:hover,
+.channel__0aef5:hover {
     margin-left: 18px;
 }
- { opacity: 1 !important;
-   transform: unset !important; }
-
