--- a/source.css
+++ b/source.css
@@ -116,13 +116,18 @@ button.button_ae40a4 /* make user panel buttons round */ {
 .member_aa4760 /* members */,
 .channel__0aef5 /* dms */,
 .sidebar__02e8d .item__48dda /* settings */ {
-    transition: margin-left 0.2s ease;
+    transition: margin-left 0.2s ease, transform 0.2s ease;
+    transition-delay: 0s, 0.1s; 
 }
+
 .wrapper__612a5:hover .link_ddbb36,
 .sidebar__02e8d .item__48dda:hover {
     margin-left: 10px;
+    transform: scale(1.05);
 }
+
 .member_aa4760:hover,
 .channel__0aef5:hover {
     margin-left: 18px;
+    transform: scale(1.05);
 }
