--- a/source.css
+++ b/source.css
@@ -5,7 +5,7 @@
 @import url('https://raw.githubusercontent.com/Vortex-Chaos/Discord-Connections-Glow/main/Code.css');
 @import url('https://raw.githubusercontent.com/Panniku/vc-snippets/main/BetterSpotifyPlayer.css');
 @import url('https://s-k-y-l-i.github.io/discord-themes/Theme%20code/transparent-popups.css');
-@import url('https://raw.githubusercontent.com/refact0r/midnight-discord/master/flavors/midnight-vencord.theme.css')
+@import url('https://refact0r.github.io/midnight-discord/flavors/midnight-vencord.theme.css')
 
 /* Config */
 :root{
